--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,26 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  background-color: #fcfcfc;
+  /* min-height: 100vh; */
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* flex-direction: column; */
+  /* align-items: center; */
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.cat-logo {
+  width: 100px;
+  margin-left: 20px;
+}
+.nav-links {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  padding-right: 50px;
+}
 .App-link {
   color: #61dafb;
 }
@@ -35,4 +44,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+footer {
+  font-size: 20px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: space-around;
 }
