--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
+
+* {
+  font-family: 'Yatra One', cursive;
+}
+
 .App {
   text-align: center;
 }
@@ -46,6 +52,9 @@ header {
   }
 }
 
+.home {
+  background-color: #BCEDFE;
+}
 footer {
   font-size: 20px;
   position: fixed;
