--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
 
 * {
+  margin: 0;
+  padding: 0;
   font-family: 'Yatra One', cursive;
 }
 
@@ -63,4 +65,10 @@ footer {
   background-color: #ffffff;
   display: flex;
   justify-content: space-around;
+}
+
+.bgimg {
+  background-color: #BCEDFE;
+  background-size: cover;
+  height: 100vh;
 }
